# AdtModder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang_format.sh  example.json
.github/workflows/: main.yml
inc/: adt.h  types.h
include/: adt.h  adt_modder.h  fileio.h  types.h  utils.h
src/: adt.c  adt_modder.cpp  fileio.cpp  main.cpp
src/adt_modder/: add_node.cpp  add_prop.cpp  delete_prop.cpp  randomize_prop_op.cpp  replace_prop_op.cpp  zero_out_prop_op.cpp
